--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
+    "vue-analytics": "^5.17.0",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
