--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-analytics": "^5.17.0",
